# Robot

./: CMakeLists.txt
include/: command_receiver.h  console_command_receiver.h  image_processor_command_receiver.h  motor.h  robot_controller.h  server_command_receiver.h  simulated_motor.h
src/: console_command_receiver.cpp  image_processor_command_receiver.cpp  main.cpp  robot_controller.cpp  server_command_receiver.cpp  simulated_motor.cpp
